# qutip

./: .codeclimate.yml  .coveragerc  .gitignore  .mailmap  .readthedocs.yaml  .travis.yml  CITATION.bib  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Fitting_HEOM.ipynb  INSTALL.txt  LICENSE.txt  MANIFEST.in  Makefile  OhmicBath.ipynb  README  README.md  README.txt  RELEASE.txt  RHS_heom.ipynb  VERSION  bloch-animation.sh  cavity-qubit-Monte-Carlo.py  contributors_image.ipynb  cython_fail_test.py  dnorm_test.ipynb  doxygen.cfg  ex_34.py  fseries test.py  hbar_compiler.py  hbar_fitting.py  hbar_processor.py  hbar_sequence.py  hbar_testfield.py  hbar_testmultiprocessing.py  installation.txt  mc_test_str.py  mcsolve_test.py  new_pr.ipynb  opto_region.py  (+45 more)
.github/: FUNDING.yml  dependabot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.md  feature_request.yaml  others.md  others.yaml
.github/PULL_REQUEST/: pull_request_template.md
.github/workflows/: build.yml  build_documentation.yml  tests.yml  tests_env.yml
.ipynb_checkpoints/: Fitting_HEOM-checkpoint.ipynb  OhmicBath-checkpoint.ipynb  dnorm_test-checkpoint.ipynb
Examples/: Increasing_time_dependence.py  Master_Script_For_testing.py  Reproducing_the_bug.py  Testing_new_solver.run_construction.py  ThreeSolversEvolutionComparison.py  test.py
Examples/Bichromatic_2LS/: Bichromatic_mesolve_flimesolve_spectra.py  Bichromatic_mesolve_flimesolve_state_evolution.py  Bichromatic_mesolve_flimesolve_state_evolution_diff_sec_approx.py  Bichromatic_mesolve_flimesolve_state_evolution_diff_sec_approx_minmax.py  (+1 more)
Examples/CorrelationFunctionImplementation/: Bichromatic2LS.py  Mono2LS.py
QHSO and Transmon/: QuTiP to compare transmon and QHO.ipynb
benchmark/: README.md  benchmark_comparison.py  benchmark_data.js  benchmark_mc_errors.py  benchmark_qotoolbox_integrate.m  benchmark_qotoolbox_run.m  benchmark_solver_performance.py  benchmarks.html  matlab_benchmarks.csv  matlab_benchmarks.m  matlab_benchmarks.py  matlab_version.csv  matlab_version.m  qutip_benchmarks.py  temp.m
debian/: changelog  control  copyright  python-qutip.docs  qutip.recipe  rules
doc/: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE_cc-by-3.0.txt  Makefile  QuTip_Guide.aux  QuTip_Guide.out  QuTip_Guide.tex  QuTip_Guide.toc  README.md  biblio.rst  changelog.rst  classes.rst  conf.py  contributors.rst  copyright.rst  density_matrix_vs_time.qu  dev_roadmap.md  directives.rst  doc-pyproject.toml  frontmatter.rst  functions.rst  github_fix.py  guide.rst  index.rst  installation.rst  introduction.rst  make.bat  qutip_dev_contrib.md  qutipbib.bib  release_distribution.rst  requirements.txt  rtd-environment.yml  steadystate.qu  strip_htmlfolders.sh  w-state.qasm
examples/: cavity-qubit Monte-Carlo.py  cavity-qubit-Monte-Carlo.py  cavity-qubit-correlation-1.py  cavity-qubit-correlation-2.py  cavity-qubit-correlation-3.py  cavity-qubit-eseries.py  cavity-qubit-master-equation.py  cavity-qubit-spectrum-1.py  cavity-qubit-steadystate.py  ex_2ls_pss.py  ex_2ls_pss_parallel.py  ex_JC_model.py  ex_JC_model_wigner.py  ex_JC_wigner_parallel.py  ex_basis_transform.py  ex_bloch_sphere_animation.py  ex_brme_coupled_qubits.py  ex_brme_qubit.py  ex_compare_solver_performance.py  ex_compare_solvers.py  ex_compare_td_formats.py  ex_compare_td_formats_II.py  ex_driven_qubit_rabi.py  ex_driven_qubit_rabi_II.py  ex_driven_qubit_steadystate.py  ex_energy_spectrum1.py  ex_eseries.py  ex_floquet_evolution.py  ex_floquet_markov_dynamics.py  ex_floquet_markov_master_equation.py  ex_floquet_modes.py  ex_floquet_quasienergies.py  ex_floquet_steadystate.py  ex_landau_zener.py  ex_propagator.py  ex_ptrace.py  ex_qpt_gates.py  ex_qubit_brme.py  ex_qubit_decoherence.py  ex_qubit_dynamics.py  (+15 more)
gui_elements/: about.ui
guide/: parallel_computations.ipynb
mac/: install_qutip_py2.sh  install_qutip_py3.sh
macports/: qutip.port
newsfragments/: 2671.doc.rst
notebooks/: README.md  correlation-functions.ipynb  development-Qobj-extract-eliminate.ipynb  development-benchmark-expect.ipynb  development-continuous-variable-test.ipynb  development-correlation-functions.ipynb  development-distributions.ipynb  development-e-ops-as-dict.ipynb  development-floquet-test.ipynb  development-ipynbtools-animation.ipynb  development-ipynbtools-test.ipynb  development-liouvillian-construction.ipynb  development-mcf90-test.ipynb  development-mean-field-master-equations.ipynb  development-mesolve-and-liouvillians.ipynb  development-operator-offset.ipynb  development-smesolve-inefficient-detection.ipynb  development-smesolve-milstein.ipynb  development-smesolve-tests.ipynb  development-spectrum-test.ipynb  development-steadystate-solver-benchmarks-1.ipynb  development-steadystate-solver-benchmarks-2.ipynb  development-steadystate-solver-benchmarks.ipynb  mesolve-and-liouvillians.ipynb  qutip-notebook-example-1.ipynb  test-eigenvalues.ipynb
ports/: PortIndex  PortIndex.quick
qutip/: .coveragerc  .gitignore  Bloch.py  Counter.py  MEData.py  Mcdata.py  Mcoptions.py  Odedata.py  Odeoptions.py  Qobj.py  __init__.py  _distributions.cp312-win_amd64.pyd  _distributions.cpp  _distributions.pyx  _logging.py  _pyxbuilder.py  _reset.py  _version.py  about.py  animation.py  backend.py  basis.py  baths.py  bloch.py  bloch3d.py  bloch_redfield.py  blochsphere.py  cite.py  clebsch.py  cloudfor.py  cnot.py  coefficient.py  color.py  configrc.py  configspec.ini  continous_variables.py  continuous_variables.py  control.py  correlation.py  countstat.py  (+136 more)
qutip.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: __init__.py
tests/: Hadamard_params.ini  pytest.ini  test_fileio.py  test_measurement.py  test_mkl.py  test_openmp.py  test_utilities.py  test_wigner.py
unittests/: run_all_tests.sh  test_Qobj.py  test_basis_transformation.py  test_eigenstates.py  test_evolution.py  test_fileio.py  test_jc_model_evolution.py  test_matrix_vector_conversion.py  test_operators.py  test_qobj_types.py  test_rand.py  test_sp_eigs.py  test_states.py  test_steadystate.py
(+1845 files in other folders)
