[build-system]
requires = [
    "setuptools",
    "packaging",
    "wheel",
    "cython>=0.29.20; python_version>='3.10'",
    "cython>=0.29.20,<3.0.0; python_version<='3.9'",
    # See https://numpy.org/doc/stable/user/depending_on_numpy.html for
    # the recommended way to build against numpy's C API:
    "numpy>=2.0.0",
    "scipy>=1.9",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
# Change in future version to "build"
build-frontend = "pip"

[tool.towncrier]
directory = "doc/changes"
filename = "doc/changelog.rst"
name = "QuTiP"
package = "qutip"
[[tool.towncrier.type]]
directory = "deprecation"
name = "Deprecations"
showcontent = true
[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true
[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true
[[tool.towncrier.type]]
directory = "removal"
name = "Removals"
showcontent = true
[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true
[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = true
