[metadata]
name = qutip
url = https://qutip.org
description = QuTiP: The Quantum Toolbox in Python
long_description = file: README.md
long_description_content_type = text/markdown; variant=GFM
keywords = quantum, physics, dynamics
license = BSD 3-Clause License
license_file = LICENSE.txt
project_urls =
    Bug Tracker = https://github.com/qutip/qutip/issues
    Documentation = https://qutip.org/docs/latest/
    Source Code = https://github.com/qutip/qutip
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
author = Alexander Pitchford, Paul D. Nation, Robert J. Johansson, Chris Granade, Arne Grimsmo, Nathan Shammah, Shahnawaz Ahmed, Neill Lambert, Eric Giguere, Boxi Li, Jake Lishman, Simon Cross
author_email = qutip-admin@googlegroups.com
platforms = Linux, Mac OSX, Unix, Windows

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    numpy>=1.16.6
    scipy>=1.0
    packaging
setup_requires =
    numpy>=1.13.3
    scipy>=1.0
    cython>=0.29.20
    packaging

[options.packages.find]
include = qutip*

[options.extras_require]
graphics = matplotlib>=1.2.1
runtime_compilation = cython>=0.29.20
semidefinite =
    cvxpy>=1.0
    cvxopt
tests =
    pytest>=5.2
    pytest-rerunfailures
; This uses ConfigParser's string interpolation to include all the above
; dependencies into one single target, convenient for testing full builds.
full =
    %(graphics)s
    %(runtime_compilation)s
    %(semidefinite)s
    %(tests)s
