[metadata]
name = qutip
url = https://qutip.org
description = QuTiP: The Quantum Toolbox in Python
long_description = file: README.md
long_description_content_type = text/markdown; variant=GFM
keywords = quantum, physics, dynamics
license = BSD 3-Clause License
license_files = LICENSE.txt
project_urls =
    Bug Tracker = https://github.com/qutip/qutip/issues
    Documentation = https://qutip.readthedocs.io/en/stable/
    Source Code = https://github.com/qutip/qutip
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
author = Alexander Pitchford, Paul D. Nation, Robert J. Johansson, Chris Granade, Arne Grimsmo, Nathan Shammah, Shahnawaz Ahmed, Neill Lambert, Eric Giguere, Boxi Li, Jake Lishman, Simon Cross
author_email = qutip-admin@googlegroups.com
platforms = Linux, Mac OSX, Unix, Windows

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.10
install_requires =
    numpy>=1.22
    scipy>=1.9
    packaging
setup_requires =
    numpy>=2.0.0
    scipy>=1.9
    cython>=0.29.20; python_version>='3.10'
    packaging

[options.packages.find]
include = qutip*

[options.extras_require]
graphics = matplotlib>=3.5
runtime_compilation =
    cython>=0.29.20; python_version>='3.10'
    filelock
    setuptools
semidefinite =
    cvxpy>=1.0
    cvxopt
tests =
    pytest>=5.2
    pytest-rerunfailures
ipython =
    ipython
extras =
    # loky 3.5.0 has a bug with python 3.10 on linux. (joblib/loky#444)
    # Fixed in 3.5.1
    loky; python_version>='3.11'
    loky!=3.5.0; python_version<='3.10'
    tqdm
    mpmath
mpi =
    mpi4py
; This uses ConfigParser's string interpolation to include all the above
; dependencies into one single target, convenient for testing full builds.
full =
    %(graphics)s
    %(runtime_compilation)s
    %(semidefinite)s
    %(tests)s
    %(ipython)s
    %(extras)s
